syntax = "proto3";

package api;

option go_package = "./;api";

service Palantir {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bytes value = 1;
}

message SetRequest {
  bytes key = 1;
  bytes value = 2;
}

message SetResponse {}

message DeleteRequest {
  bytes key = 1;
}

message DeleteResponse {}
